--- a/docbuild/api/Scrapbook101core.Models.AssetItem.yml
+++ b/docbuild/api/Scrapbook101core.Models.AssetItem.yml
@@ -22,7 +22,7 @@ items:
     remote:
       path: Scrapbook101core/Models/Item.cs
       branch: master
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      repo: https://github.com/travelmarx/scrapbook101core
     id: AssetItem
     path: ../Scrapbook101core/Models/Item.cs
     startLine: 150
@@ -35,17 +35,9 @@ items:
     content: 'public class AssetItem : IComparable<AssetItem>'
     content.vb: >-
       Public Class AssetItem
-          Implements IComparable(Of AssetItem)
+          Inherits IComparable(Of AssetItem)
   inheritance:
   - System.Object
-  implements:
-  - System.IComparable{Scrapbook101core.Models.AssetItem}
-  inheritedMembers:
-  - System.Object.Equals(System.Object,System.Object)
-  - System.Object.GetType
-  - System.Object.MemberwiseClone
-  - System.Object.ReferenceEquals(System.Object,System.Object)
-  - System.Object.ToString
   modifiers.csharp:
   - public
   - class
@@ -67,7 +59,7 @@ items:
     remote:
       path: Scrapbook101core/Models/Item.cs
       branch: master
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      repo: https://github.com/travelmarx/scrapbook101core
     id: Name
     path: ../Scrapbook101core/Models/Item.cs
     startLine: 152
@@ -75,26 +67,12 @@ items:
   - Scrapbook101core
   namespace: Scrapbook101core.Models
   syntax:
-    content: >-
-      [JsonProperty(PropertyName = "name")]
-
-      public string Name { get; set; }
+    content: public string Name { get; set; }
     parameters: []
     return:
       type: System.String
-    content.vb: >-
-      <JsonProperty(PropertyName:="name")>
-
-      Public Property Name As String
+    content.vb: Public Property Name As String
   overload: Scrapbook101core.Models.AssetItem.Name*
-  attributes:
-  - type: Newtonsoft.Json.JsonPropertyAttribute
-    ctor: Newtonsoft.Json.JsonPropertyAttribute.#ctor
-    arguments: []
-    namedArguments:
-    - name: PropertyName
-      type: System.String
-      value: name
   modifiers.csharp:
   - public
   - get
@@ -116,7 +94,7 @@ items:
     remote:
       path: Scrapbook101core/Models/Item.cs
       branch: master
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      repo: https://github.com/travelmarx/scrapbook101core
     id: Size
     path: ../Scrapbook101core/Models/Item.cs
     startLine: 155
@@ -124,26 +102,12 @@ items:
   - Scrapbook101core
   namespace: Scrapbook101core.Models
   syntax:
-    content: >-
-      [JsonProperty(PropertyName = "size")]
-
-      public string Size { get; set; }
+    content: public string Size { get; set; }
     parameters: []
     return:
       type: System.String
-    content.vb: >-
-      <JsonProperty(PropertyName:="size")>
-
-      Public Property Size As String
+    content.vb: Public Property Size As String
   overload: Scrapbook101core.Models.AssetItem.Size*
-  attributes:
-  - type: Newtonsoft.Json.JsonPropertyAttribute
-    ctor: Newtonsoft.Json.JsonPropertyAttribute.#ctor
-    arguments: []
-    namedArguments:
-    - name: PropertyName
-      type: System.String
-      value: size
   modifiers.csharp:
   - public
   - get
@@ -165,7 +129,7 @@ items:
     remote:
       path: Scrapbook101core/Models/Item.cs
       branch: master
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      repo: https://github.com/travelmarx/scrapbook101core
     id: Equals
     path: ../Scrapbook101core/Models/Item.cs
     startLine: 158
@@ -200,7 +164,7 @@ items:
     remote:
       path: Scrapbook101core/Models/Item.cs
       branch: master
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      repo: https://github.com/travelmarx/scrapbook101core
     id: Equals
     path: ../Scrapbook101core/Models/Item.cs
     startLine: 163
@@ -215,7 +179,6 @@ items:
     return:
       type: System.Boolean
     content.vb: Public Overrides Function Equals(obj As Object) As Boolean
-  overridden: System.Object.Equals(System.Object)
   overload: Scrapbook101core.Models.AssetItem.Equals*
   modifiers.csharp:
   - public
@@ -238,7 +201,7 @@ items:
     remote:
       path: Scrapbook101core/Models/Item.cs
       branch: master
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      repo: https://github.com/travelmarx/scrapbook101core
     id: GetHashCode
     path: ../Scrapbook101core/Models/Item.cs
     startLine: 170
@@ -250,7 +213,6 @@ items:
     return:
       type: System.Int32
     content.vb: Public Overrides Function GetHashCode As Integer
-  overridden: System.Object.GetHashCode
   overload: Scrapbook101core.Models.AssetItem.GetHashCode*
   modifiers.csharp:
   - public
@@ -273,7 +235,7 @@ items:
     remote:
       path: Scrapbook101core/Models/Item.cs
       branch: master
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      repo: https://github.com/travelmarx/scrapbook101core
     id: CompareTo
     path: ../Scrapbook101core/Models/Item.cs
     startLine: 174
@@ -289,8 +251,6 @@ items:
       type: System.Int32
     content.vb: Public Function CompareTo(other As AssetItem) As Integer
   overload: Scrapbook101core.Models.AssetItem.CompareTo*
-  implements:
-  - System.IComparable{Scrapbook101core.Models.AssetItem}.CompareTo(Scrapbook101core.Models.AssetItem)
   modifiers.csharp:
   - public
   modifiers.vb:
@@ -311,314 +271,16 @@ references:
   nameWithType: Scrapbook101core.Models
   fullName: Scrapbook101core.Models
 - uid: System.Object
-  commentId: T:System.Object
-  parent: System
   isExternal: true
   name: Object
   nameWithType: Object
   fullName: System.Object
-- uid: System.IComparable{Scrapbook101core.Models.AssetItem}
-  commentId: T:System.IComparable{Scrapbook101core.Models.AssetItem}
-  parent: System
-  definition: System.IComparable`1
-  name: IComparable<AssetItem>
-  nameWithType: IComparable<AssetItem>
-  fullName: System.IComparable<Scrapbook101core.Models.AssetItem>
-  nameWithType.vb: IComparable(Of AssetItem)
-  fullName.vb: System.IComparable(Of Scrapbook101core.Models.AssetItem)
-  name.vb: IComparable(Of AssetItem)
-  spec.csharp:
-  - uid: System.IComparable`1
-    name: IComparable
-    nameWithType: IComparable
-    fullName: System.IComparable
-    isExternal: true
-  - name: <
-    nameWithType: <
-    fullName: <
-  - uid: Scrapbook101core.Models.AssetItem
-    name: AssetItem
-    nameWithType: AssetItem
-    fullName: Scrapbook101core.Models.AssetItem
-  - name: '>'
-    nameWithType: '>'
-    fullName: '>'
-  spec.vb:
-  - uid: System.IComparable`1
-    name: IComparable
-    nameWithType: IComparable
-    fullName: System.IComparable
-    isExternal: true
-  - name: '(Of '
-    nameWithType: '(Of '
-    fullName: '(Of '
-  - uid: Scrapbook101core.Models.AssetItem
-    name: AssetItem
-    nameWithType: AssetItem
-    fullName: Scrapbook101core.Models.AssetItem
-  - name: )
-    nameWithType: )
-    fullName: )
-- uid: System.Object.Equals(System.Object,System.Object)
-  commentId: M:System.Object.Equals(System.Object,System.Object)
-  parent: System.Object
-  isExternal: true
-  name: Equals(Object, Object)
-  nameWithType: Object.Equals(Object, Object)
-  fullName: System.Object.Equals(System.Object, System.Object)
-  spec.csharp:
-  - uid: System.Object.Equals(System.Object,System.Object)
-    name: Equals
-    nameWithType: Object.Equals
-    fullName: System.Object.Equals
-    isExternal: true
-  - name: (
-    nameWithType: (
-    fullName: (
-  - uid: System.Object
-    name: Object
-    nameWithType: Object
-    fullName: System.Object
-    isExternal: true
-  - name: ', '
-    nameWithType: ', '
-    fullName: ', '
-  - uid: System.Object
-    name: Object
-    nameWithType: Object
-    fullName: System.Object
-    isExternal: true
-  - name: )
-    nameWithType: )
-    fullName: )
-  spec.vb:
-  - uid: System.Object.Equals(System.Object,System.Object)
-    name: Equals
-    nameWithType: Object.Equals
-    fullName: System.Object.Equals
-    isExternal: true
-  - name: (
-    nameWithType: (
-    fullName: (
-  - uid: System.Object
-    name: Object
-    nameWithType: Object
-    fullName: System.Object
-    isExternal: true
-  - name: ', '
-    nameWithType: ', '
-    fullName: ', '
-  - uid: System.Object
-    name: Object
-    nameWithType: Object
-    fullName: System.Object
-    isExternal: true
-  - name: )
-    nameWithType: )
-    fullName: )
-- uid: System.Object.GetType
-  commentId: M:System.Object.GetType
-  parent: System.Object
-  isExternal: true
-  name: GetType()
-  nameWithType: Object.GetType()
-  fullName: System.Object.GetType()
-  spec.csharp:
-  - uid: System.Object.GetType
-    name: GetType
-    nameWithType: Object.GetType
-    fullName: System.Object.GetType
-    isExternal: true
-  - name: (
-    nameWithType: (
-    fullName: (
-  - name: )
-    nameWithType: )
-    fullName: )
-  spec.vb:
-  - uid: System.Object.GetType
-    name: GetType
-    nameWithType: Object.GetType
-    fullName: System.Object.GetType
-    isExternal: true
-  - name: (
-    nameWithType: (
-    fullName: (
-  - name: )
-    nameWithType: )
-    fullName: )
-- uid: System.Object.MemberwiseClone
-  commentId: M:System.Object.MemberwiseClone
-  parent: System.Object
-  isExternal: true
-  name: MemberwiseClone()
-  nameWithType: Object.MemberwiseClone()
-  fullName: System.Object.MemberwiseClone()
-  spec.csharp:
-  - uid: System.Object.MemberwiseClone
-    name: MemberwiseClone
-    nameWithType: Object.MemberwiseClone
-    fullName: System.Object.MemberwiseClone
-    isExternal: true
-  - name: (
-    nameWithType: (
-    fullName: (
-  - name: )
-    nameWithType: )
-    fullName: )
-  spec.vb:
-  - uid: System.Object.MemberwiseClone
-    name: MemberwiseClone
-    nameWithType: Object.MemberwiseClone
-    fullName: System.Object.MemberwiseClone
-    isExternal: true
-  - name: (
-    nameWithType: (
-    fullName: (
-  - name: )
-    nameWithType: )
-    fullName: )
-- uid: System.Object.ReferenceEquals(System.Object,System.Object)
-  commentId: M:System.Object.ReferenceEquals(System.Object,System.Object)
-  parent: System.Object
-  isExternal: true
-  name: ReferenceEquals(Object, Object)
-  nameWithType: Object.ReferenceEquals(Object, Object)
-  fullName: System.Object.ReferenceEquals(System.Object, System.Object)
-  spec.csharp:
-  - uid: System.Object.ReferenceEquals(System.Object,System.Object)
-    name: ReferenceEquals
-    nameWithType: Object.ReferenceEquals
-    fullName: System.Object.ReferenceEquals
-    isExternal: true
-  - name: (
-    nameWithType: (
-    fullName: (
-  - uid: System.Object
-    name: Object
-    nameWithType: Object
-    fullName: System.Object
-    isExternal: true
-  - name: ', '
-    nameWithType: ', '
-    fullName: ', '
-  - uid: System.Object
-    name: Object
-    nameWithType: Object
-    fullName: System.Object
-    isExternal: true
-  - name: )
-    nameWithType: )
-    fullName: )
-  spec.vb:
-  - uid: System.Object.ReferenceEquals(System.Object,System.Object)
-    name: ReferenceEquals
-    nameWithType: Object.ReferenceEquals
-    fullName: System.Object.ReferenceEquals
-    isExternal: true
-  - name: (
-    nameWithType: (
-    fullName: (
-  - uid: System.Object
-    name: Object
-    nameWithType: Object
-    fullName: System.Object
-    isExternal: true
-  - name: ', '
-    nameWithType: ', '
-    fullName: ', '
-  - uid: System.Object
-    name: Object
-    nameWithType: Object
-    fullName: System.Object
-    isExternal: true
-  - name: )
-    nameWithType: )
-    fullName: )
-- uid: System.Object.ToString
-  commentId: M:System.Object.ToString
-  parent: System.Object
-  isExternal: true
-  name: ToString()
-  nameWithType: Object.ToString()
-  fullName: System.Object.ToString()
-  spec.csharp:
-  - uid: System.Object.ToString
-    name: ToString
-    nameWithType: Object.ToString
-    fullName: System.Object.ToString
-    isExternal: true
-  - name: (
-    nameWithType: (
-    fullName: (
-  - name: )
-    nameWithType: )
-    fullName: )
-  spec.vb:
-  - uid: System.Object.ToString
-    name: ToString
-    nameWithType: Object.ToString
-    fullName: System.Object.ToString
-    isExternal: true
-  - name: (
-    nameWithType: (
-    fullName: (
-  - name: )
-    nameWithType: )
-    fullName: )
-- uid: System
-  commentId: N:System
-  isExternal: true
-  name: System
-  nameWithType: System
-  fullName: System
-- uid: System.IComparable`1
-  commentId: T:System.IComparable`1
-  isExternal: true
-  name: IComparable<T>
-  nameWithType: IComparable<T>
-  fullName: System.IComparable<T>
-  nameWithType.vb: IComparable(Of T)
-  fullName.vb: System.IComparable(Of T)
-  name.vb: IComparable(Of T)
-  spec.csharp:
-  - uid: System.IComparable`1
-    name: IComparable
-    nameWithType: IComparable
-    fullName: System.IComparable
-    isExternal: true
-  - name: <
-    nameWithType: <
-    fullName: <
-  - name: T
-    nameWithType: T
-    fullName: T
-  - name: '>'
-    nameWithType: '>'
-    fullName: '>'
-  spec.vb:
-  - uid: System.IComparable`1
-    name: IComparable
-    nameWithType: IComparable
-    fullName: System.IComparable
-    isExternal: true
-  - name: '(Of '
-    nameWithType: '(Of '
-    fullName: '(Of '
-  - name: T
-    nameWithType: T
-    fullName: T
-  - name: )
-    nameWithType: )
-    fullName: )
 - uid: Scrapbook101core.Models.AssetItem.Name*
   commentId: Overload:Scrapbook101core.Models.AssetItem.Name
   name: Name
   nameWithType: AssetItem.Name
   fullName: Scrapbook101core.Models.AssetItem.Name
 - uid: System.String
-  commentId: T:System.String
-  parent: System
   isExternal: true
   name: String
   nameWithType: String
@@ -640,92 +302,16 @@ references:
   nameWithType: AssetItem
   fullName: Scrapbook101core.Models.AssetItem
 - uid: System.Boolean
-  commentId: T:System.Boolean
-  parent: System
   isExternal: true
   name: Boolean
   nameWithType: Boolean
   fullName: System.Boolean
-- uid: System.Object.Equals(System.Object)
-  commentId: M:System.Object.Equals(System.Object)
-  parent: System.Object
-  isExternal: true
-  name: Equals(Object)
-  nameWithType: Object.Equals(Object)
-  fullName: System.Object.Equals(System.Object)
-  spec.csharp:
-  - uid: System.Object.Equals(System.Object)
-    name: Equals
-    nameWithType: Object.Equals
-    fullName: System.Object.Equals
-    isExternal: true
-  - name: (
-    nameWithType: (
-    fullName: (
-  - uid: System.Object
-    name: Object
-    nameWithType: Object
-    fullName: System.Object
-    isExternal: true
-  - name: )
-    nameWithType: )
-    fullName: )
-  spec.vb:
-  - uid: System.Object.Equals(System.Object)
-    name: Equals
-    nameWithType: Object.Equals
-    fullName: System.Object.Equals
-    isExternal: true
-  - name: (
-    nameWithType: (
-    fullName: (
-  - uid: System.Object
-    name: Object
-    nameWithType: Object
-    fullName: System.Object
-    isExternal: true
-  - name: )
-    nameWithType: )
-    fullName: )
-- uid: System.Object.GetHashCode
-  commentId: M:System.Object.GetHashCode
-  parent: System.Object
-  isExternal: true
-  name: GetHashCode()
-  nameWithType: Object.GetHashCode()
-  fullName: System.Object.GetHashCode()
-  spec.csharp:
-  - uid: System.Object.GetHashCode
-    name: GetHashCode
-    nameWithType: Object.GetHashCode
-    fullName: System.Object.GetHashCode
-    isExternal: true
-  - name: (
-    nameWithType: (
-    fullName: (
-  - name: )
-    nameWithType: )
-    fullName: )
-  spec.vb:
-  - uid: System.Object.GetHashCode
-    name: GetHashCode
-    nameWithType: Object.GetHashCode
-    fullName: System.Object.GetHashCode
-    isExternal: true
-  - name: (
-    nameWithType: (
-    fullName: (
-  - name: )
-    nameWithType: )
-    fullName: )
 - uid: Scrapbook101core.Models.AssetItem.GetHashCode*
   commentId: Overload:Scrapbook101core.Models.AssetItem.GetHashCode
   name: GetHashCode
   nameWithType: AssetItem.GetHashCode
   fullName: Scrapbook101core.Models.AssetItem.GetHashCode
 - uid: System.Int32
-  commentId: T:System.Int32
-  parent: System
   isExternal: true
   name: Int32
   nameWithType: Int32
@@ -735,82 +321,3 @@ references:
   name: CompareTo
   nameWithType: AssetItem.CompareTo
   fullName: Scrapbook101core.Models.AssetItem.CompareTo
-- uid: System.IComparable{Scrapbook101core.Models.AssetItem}.CompareTo(Scrapbook101core.Models.AssetItem)
-  commentId: M:System.IComparable{Scrapbook101core.Models.AssetItem}.CompareTo(Scrapbook101core.Models.AssetItem)
-  parent: System.IComparable{Scrapbook101core.Models.AssetItem}
-  definition: System.IComparable`1.CompareTo(`0)
-  name: CompareTo(AssetItem)
-  nameWithType: IComparable<AssetItem>.CompareTo(AssetItem)
-  fullName: System.IComparable<Scrapbook101core.Models.AssetItem>.CompareTo(Scrapbook101core.Models.AssetItem)
-  nameWithType.vb: IComparable(Of AssetItem).CompareTo(AssetItem)
-  fullName.vb: System.IComparable(Of Scrapbook101core.Models.AssetItem).CompareTo(Scrapbook101core.Models.AssetItem)
-  spec.csharp:
-  - uid: System.IComparable`1.CompareTo(`0)
-    name: CompareTo
-    nameWithType: IComparable<AssetItem>.CompareTo
-    fullName: System.IComparable<Scrapbook101core.Models.AssetItem>.CompareTo
-    isExternal: true
-  - name: (
-    nameWithType: (
-    fullName: (
-  - uid: Scrapbook101core.Models.AssetItem
-    name: AssetItem
-    nameWithType: AssetItem
-    fullName: Scrapbook101core.Models.AssetItem
-  - name: )
-    nameWithType: )
-    fullName: )
-  spec.vb:
-  - uid: System.IComparable`1.CompareTo(`0)
-    name: CompareTo
-    nameWithType: IComparable(Of AssetItem).CompareTo
-    fullName: System.IComparable(Of Scrapbook101core.Models.AssetItem).CompareTo
-    isExternal: true
-  - name: (
-    nameWithType: (
-    fullName: (
-  - uid: Scrapbook101core.Models.AssetItem
-    name: AssetItem
-    nameWithType: AssetItem
-    fullName: Scrapbook101core.Models.AssetItem
-  - name: )
-    nameWithType: )
-    fullName: )
-- uid: System.IComparable`1.CompareTo(`0)
-  commentId: M:System.IComparable`1.CompareTo(`0)
-  isExternal: true
-  name: CompareTo(T)
-  nameWithType: IComparable<T>.CompareTo(T)
-  fullName: System.IComparable<T>.CompareTo(T)
-  nameWithType.vb: IComparable(Of T).CompareTo(T)
-  fullName.vb: System.IComparable(Of T).CompareTo(T)
-  spec.csharp:
-  - uid: System.IComparable`1.CompareTo(`0)
-    name: CompareTo
-    nameWithType: IComparable<T>.CompareTo
-    fullName: System.IComparable<T>.CompareTo
-    isExternal: true
-  - name: (
-    nameWithType: (
-    fullName: (
-  - name: T
-    nameWithType: T
-    fullName: T
-  - name: )
-    nameWithType: )
-    fullName: )
-  spec.vb:
-  - uid: System.IComparable`1.CompareTo(`0)
-    name: CompareTo
-    nameWithType: IComparable(Of T).CompareTo
-    fullName: System.IComparable(Of T).CompareTo
-    isExternal: true
-  - name: (
-    nameWithType: (
-    fullName: (
-  - name: T
-    nameWithType: T
-    fullName: T
-  - name: )
-    nameWithType: )
-    fullName: )
